# o2oData-Byrpa

./: .env.example  .gitignore  Dockerfile  README.md  o2o业务看板模板(ads层).xlsx  pyproject.toml  railway.toml  对于dbt的认知.md  月工作完成情况.doc
.cursor/rules/: apan-work.mdc
config/: sources.yaml  table_schemas.yaml
config/fingerprints/: ods_rpa_eleme_fin_cps.json  ods_rpa_eleme_fin_inquiry.json  ods_rpa_eleme_fin_sales_detail.json  ods_rpa_eleme_fin_sales_summary.json  ods_rpa_eleme_fin_semi_detail.json  ods_rpa_eleme_fin_semi_product.json  ods_rpa_eleme_fin_summary.json  ods_rpa_eleme_order.json  ods_rpa_eleme_promotion.json
dbt/: dbt_project.yml  profiles.yml.example  常见的dbt指令.md
dbt/analyses/: daily_store_aggregate.sql  (+6 more)
docs/: CONTRIBUTING.md  FTP_TO_ODS_MAPPING.md  O2O结算匹配与待结转口径.md  RPA文件命名规范.csv  RPA文件命名规范.md  lib.md  rpa数据源.txt  京东到家商家对账单验数.md  给同事的操作指南.md  阿潘标黄字段清单-待校对.md  饿了么结算字段对照.md
scripts/: config_loader.py  discover_schema.py  file_reader.py  gen_review_xlsx.py  import_dim_o2o_sku_mapping_from_xls.py  import_meituan_promotion.py  import_rent_labor.py  import_store_ref.py  ingest.py  run_daily.bat  run_daily.py  sync_schema.py  validate_jd_daojia_merchant_statement.py
sql/: ddl_dim_ods_store_operating_cost.sql  o2o_daily_store_aggregate.sql  o2o_eleme_fin_by_order_type_diag.sql  o2o_eleme_fin_single_order_rebuild_verify.sql  o2o_eleme_order_fin_settlement_compare.sql  o2o_jd_fin_store_settlement_by_dt.sql  o2o_jd_xiaoshida_subsidy_jd_carry_validate.sql  o2o_settlement_two_logic_validation.sql  seed_dim_store_o2o_huixin_haikou_nanan.sql  tmp_jd_order_lookup.sql
(+7 files in other folders)
